--- a/index.html
+++ b/index.html
@@ -9672,8 +9672,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200812124034496" modified="20200812134534324" title="$:/GitHub/Filename">
-<pre></pre>
+<div created="20200812124034496" modified="20200812145209330" title="$:/GitHub/Filename">
+<pre>index.html</pre>
 </div>
 <div created="20200812124030481" modified="20200812124030481" title="$:/GitHub/Path">
 <pre>/</pre>
@@ -9702,7 +9702,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200812123433047" list="$:/ControlPanel GettingStarted" modified="20200812123433047" title="$:/StoryList">
+<div created="20200812145151839" list="$:/ControlPanel GettingStarted" modified="20200812145151839" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9718,23 +9718,23 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200812123405817&quot;
+            &quot;text&quot;: &quot;20200812145142621&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/E014283/Downloads/empty%20(6).html&quot;
+            &quot;text&quot;: &quot;https://davidstdio.github.io/TiddlyWiki/&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;davidstdio.github.io&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;davidstdio.github.io&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;file:&quot;
+            &quot;text&quot;: &quot;https:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -9742,7 +9742,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/E014283/Downloads/empty%20(6).html&quot;
+            &quot;text&quot;: &quot;/TiddlyWiki/&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9750,7 +9750,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;https://davidstdio.github.io&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
