--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@ Error message and password prompt
 
 <li>$:/state/tab-2065006209</li>
 
+<li>$:/state/tab/moresidebar-1850697562</li>
+
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
 <li>$:/StoryList</li>
@@ -170,6 +174,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
+
+<li>Bluetooth wiki</li>
 
 </ul>
 </p>
@@ -9672,7 +9678,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200812124034496" modified="20200812145209330" title="$:/GitHub/Filename">
+<div created="20200812124034496" modified="20200812134534324" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
 <div created="20200812124030481" modified="20200812124030481" title="$:/GitHub/Path">
@@ -9699,10 +9705,16 @@ Error message and password prompt
 <div created="20200812123450621" modified="20200812123450621" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
+<div created="20200824141719166" modified="20200824141740694" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/Tags</pre>
+</div>
+<div created="20200824141448958" modified="20200824141616723" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
+</div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200812145151839" list="$:/ControlPanel GettingStarted" modified="20200812145151839" title="$:/StoryList">
+<div created="20200824141623227" list="[[Bluetooth wiki]] GettingStarted" modified="20200824141623227" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9718,7 +9730,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200812145142621&quot;
+            &quot;text&quot;: &quot;20200824141603214&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -9875,6 +9887,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200824141517949" modified="20200824141905382" tags="[[bluetooth wiki]]" title="Bluetooth wiki">
+<pre>It is important to know that maximum number of packets per connection event is dependent on the BLE stack/chipsets and is limited to 4 packets per connection event with iOS, and 6 packets per connection event in Android </pre>
 </div>
 
 
