--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>BLE Throughput</li>
+
 <li>Bluetooth wiki</li>
 
 </ul>
@@ -9705,16 +9707,16 @@ Error message and password prompt
 <div created="20200812123450621" modified="20200812123450621" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20200824141719166" modified="20200824141740694" title="$:/state/tab/moresidebar-1850697562">
-<pre>$:/core/ui/MoreSideBar/Tags</pre>
+<div created="20200824141719166" modified="20200824143042600" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20200824141448958" modified="20200824141616723" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20200824141448958" modified="20200824143551343" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200824141623227" list="[[Bluetooth wiki]] GettingStarted" modified="20200824141623227" title="$:/StoryList">
+<div created="20200824142937985" list="$:/ControlPanel [[BLE Throughput]] [[Bluetooth wiki]]" modified="20200824143553296" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9730,7 +9732,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200824141603214&quot;
+            &quot;text&quot;: &quot;20200824142929968&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -9888,8 +9890,13 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200824141517949" modified="20200824141905382" tags="[[bluetooth wiki]]" title="Bluetooth wiki">
-<pre>It is important to know that maximum number of packets per connection event is dependent on the BLE stack/chipsets and is limited to 4 packets per connection event with iOS, and 6 packets per connection event in Android </pre>
+<div created="20200824143432737" modified="20200824143516078" tags="" title="BLE Throughput">
+<pre></pre>
+</div>
+<div created="20200824141517949" modified="20200824143418816" tags="[[bluetooth wiki]]" title="Bluetooth wiki">
+<pre>It is important to know that maximum number of packets per connection event is dependent on the BLE stack/chipsets and is limited to 4 packets per connection event with iOS, and 6 packets per connection event in Android 
+
+BLE represents a trade-off between energy consumption, latency, piconet size, and throughput that mainly depends on parameters such as connInterval and connSlaveLatency. </pre>
 </div>
 
 
