--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/DownloadSaver/AutoSave</li>
+
 <li>$:/core</li>
 
 <li>$:/GitHub/Filename</li>
@@ -153,13 +155,11 @@ Error message and password prompt
 
 <li>$:/GitHub/Username</li>
 
+<li>$:/GitLab/Username</li>
+
 <li>$:/isEncrypted</li>
 
 <li>$:/SiteTitle</li>
-
-<li>$:/state/image-picker/system-1349326003</li>
-
-<li>$:/state/sidebar</li>
 
 <li>$:/state/tab-1749438307</li>
 
@@ -179,11 +179,11 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>ARM aapcs decipher</li>
+
 <li>BLE Throughput</li>
 
 <li>Bluetooth wiki</li>
-
-<li>Stackoverflow Debug on STM32L4 mcu</li>
 
 </ul>
 </p>
@@ -199,6 +199,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20200826134240033" modified="20200826134316999" title="$:/config/DownloadSaver/AutoSave">
+<pre>no</pre>
+</div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.23-prerelease">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -9686,19 +9689,22 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200812124034496" modified="20200812134534324" title="$:/GitHub/Filename">
+<div created="20200812124034496" modified="20200826134345734" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
-<div created="20200812124030481" modified="20200827073401474" title="$:/GitHub/Path">
+<div created="20200812124030481" modified="20200826134329208" title="$:/GitHub/Path">
 <pre>/</pre>
 </div>
 <div created="20200812124013753" modified="20200812124019875" title="$:/GitHub/Repo">
 <pre>DavidStdio/TiddlyWiki</pre>
 </div>
-<div created="20200812124212840" modified="20200827073354553" title="$:/GitHub/ServerURL">
+<div created="20200812124212840" modified="20200827073207413" title="$:/GitHub/ServerURL">
 <pre>https://api.github.com</pre>
 </div>
 <div created="20200812123523921" modified="20200812123552036" title="$:/GitHub/Username">
+<pre>davidstdio</pre>
+</div>
+<div created="20200827071742733" modified="20200827071746297" title="$:/GitLab/Username">
 <pre>davidstdio</pre>
 </div>
 <div title="$:/isEncrypted">
@@ -9707,16 +9713,10 @@ Error message and password prompt
 <div created="20200812123420867" modified="20200812123421598" title="$:/SiteTitle">
 <pre>TiddlyWiki</pre>
 </div>
-<div created="20200826125925736" modified="20200826125957114" title="$:/state/image-picker/system-1349326003">
-<pre>show</pre>
-</div>
-<div created="20200826125056796" modified="20200826131723738" title="$:/state/sidebar">
-<pre>yes</pre>
-</div>
 <div created="20200812123434981" modified="20200812123434981" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200812123450621" modified="20200812123450621" title="$:/state/tab-2065006209">
+<div created="20200812123450621" modified="20200827073134636" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200824141719166" modified="20200824143042600" title="$:/state/tab/moresidebar-1850697562">
@@ -9728,7 +9728,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200826134745238" list="$:/ControlPanel [[Stackoverflow Debug on STM32L4 mcu]] GettingStarted" modified="20200827073350391" title="$:/StoryList">
+<div created="20200826133804311" list="$:/ControlPanel [[ARM aapcs decipher]] [[BLE Throughput]] GettingStarted" modified="20200826134153092" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9744,11 +9744,11 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200826134741278&quot;
+            &quot;text&quot;: &quot;20200826133756848&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/E014283/Downloads/tiddlywiki%20(5).html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/E014283/workarea/Docs/TiddlyWiki/index.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -9768,7 +9768,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/E014283/Downloads/tiddlywiki%20(5).html&quot;
+            &quot;text&quot;: &quot;/C:/Users/E014283/workarea/Docs/TiddlyWiki/index.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9902,23 +9902,20 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200824143432737" modified="20200824143516078" tags="" title="BLE Throughput">
-<pre></pre>
+<div created="20200826133856820" modified="20200826134113077" tags="" title="ARM aapcs decipher">
+<pre>Following command 
+
+''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf | less''
+
+will give full disassembly of the binary</pre>
+</div>
+<div created="20200824143432737" modified="20200826133820815" tags="" title="BLE Throughput">
+<pre>aaa</pre>
 </div>
 <div created="20200824141517949" modified="20200824143418816" tags="[[bluetooth wiki]]" title="Bluetooth wiki">
 <pre>It is important to know that maximum number of packets per connection event is dependent on the BLE stack/chipsets and is limited to 4 packets per connection event with iOS, and 6 packets per connection event in Android 
 
 BLE represents a trade-off between energy consumption, latency, piconet size, and throughput that mainly depends on parameters such as connInterval and connSlaveLatency. </pre>
-</div>
-<div created="20200826124733722" modified="20200826131718543" tags="" title="Stackoverflow Debug on STM32L4 mcu">
-<pre>Following command 
-
-''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf
-''
-
-gives full disassembly of the binary 
-
-</pre>
 </div>
 
 
