--- a/index.html
+++ b/index.html
@@ -141,8 +141,6 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
-<li>$:/config/DownloadSaver/AutoSave</li>
-
 <li>$:/core</li>
 
 <li>$:/GitHub/Filename</li>
@@ -155,11 +153,13 @@ Error message and password prompt
 
 <li>$:/GitHub/Username</li>
 
-<li>$:/GitLab/Username</li>
-
 <li>$:/isEncrypted</li>
 
 <li>$:/SiteTitle</li>
+
+<li>$:/state/image-picker/system-1349326003</li>
+
+<li>$:/state/sidebar</li>
 
 <li>$:/state/tab-1749438307</li>
 
@@ -179,11 +179,13 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
-<li>ARM aapcs decipher</li>
-
 <li>BLE Throughput</li>
 
 <li>Bluetooth wiki</li>
+
+<li>Draft of 'Stackoverflow Debug on STM32L4 mcu'</li>
+
+<li>Stackoverflow Debug on STM32L4 mcu</li>
 
 </ul>
 </p>
@@ -199,9 +201,6 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
-<div created="20200826134240033" modified="20200826134316999" title="$:/config/DownloadSaver/AutoSave">
-<pre>no</pre>
-</div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.23-prerelease">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -9689,22 +9688,19 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200812124034496" modified="20200826134345734" title="$:/GitHub/Filename">
+<div created="20200812124034496" modified="20200812134534324" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
-<div created="20200812124030481" modified="20200826134329208" title="$:/GitHub/Path">
+<div created="20200812124030481" modified="20200827073401474" title="$:/GitHub/Path">
 <pre>/</pre>
 </div>
 <div created="20200812124013753" modified="20200812124019875" title="$:/GitHub/Repo">
 <pre>DavidStdio/TiddlyWiki</pre>
 </div>
-<div created="20200812124212840" modified="20200827073207413" title="$:/GitHub/ServerURL">
+<div created="20200812124212840" modified="20200827073354553" title="$:/GitHub/ServerURL">
 <pre>https://api.github.com</pre>
 </div>
 <div created="20200812123523921" modified="20200812123552036" title="$:/GitHub/Username">
-<pre>davidstdio</pre>
-</div>
-<div created="20200827071742733" modified="20200827071746297" title="$:/GitLab/Username">
 <pre>davidstdio</pre>
 </div>
 <div title="$:/isEncrypted">
@@ -9713,10 +9709,16 @@ Error message and password prompt
 <div created="20200812123420867" modified="20200812123421598" title="$:/SiteTitle">
 <pre>TiddlyWiki</pre>
 </div>
+<div created="20200826125925736" modified="20200826125957114" title="$:/state/image-picker/system-1349326003">
+<pre>show</pre>
+</div>
+<div created="20200826125056796" modified="20200826131723738" title="$:/state/sidebar">
+<pre>yes</pre>
+</div>
 <div created="20200812123434981" modified="20200812123434981" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200812123450621" modified="20200827073134636" title="$:/state/tab-2065006209">
+<div created="20200812123450621" modified="20200812123450621" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200824141719166" modified="20200824143042600" title="$:/state/tab/moresidebar-1850697562">
@@ -9728,7 +9730,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200826133804311" list="$:/ControlPanel [[ARM aapcs decipher]] [[BLE Throughput]] GettingStarted" modified="20200826134153092" title="$:/StoryList">
+<div created="20200827074238301" list="$:/ControlPanel [[Draft of 'Stackoverflow Debug on STM32L4 mcu']] GettingStarted" modified="20200827074245005" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9744,23 +9746,23 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200826133756848&quot;
+            &quot;text&quot;: &quot;20200827074232385&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/E014283/workarea/Docs/TiddlyWiki/index.html&quot;
+            &quot;text&quot;: &quot;https://davidstdio.github.io/TiddlyWiki/&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;davidstdio.github.io&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;davidstdio.github.io&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;file:&quot;
+            &quot;text&quot;: &quot;https:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -9768,7 +9770,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/E014283/workarea/Docs/TiddlyWiki/index.html&quot;
+            &quot;text&quot;: &quot;/TiddlyWiki/&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9776,7 +9778,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;https://davidstdio.github.io&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -9902,20 +9904,73 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200826133856820" modified="20200826134113077" tags="" title="ARM aapcs decipher">
-<pre>Following command 
-
-''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf | less''
-
-will give full disassembly of the binary</pre>
-</div>
-<div created="20200824143432737" modified="20200826133820815" tags="" title="BLE Throughput">
-<pre>aaa</pre>
+<div created="20200824143432737" modified="20200824143516078" tags="" title="BLE Throughput">
+<pre></pre>
 </div>
 <div created="20200824141517949" modified="20200824143418816" tags="[[bluetooth wiki]]" title="Bluetooth wiki">
 <pre>It is important to know that maximum number of packets per connection event is dependent on the BLE stack/chipsets and is limited to 4 packets per connection event with iOS, and 6 packets per connection event in Android 
 
 BLE represents a trade-off between energy consumption, latency, piconet size, and throughput that mainly depends on parameters such as connInterval and connSlaveLatency. </pre>
+</div>
+<div created="20200826124733722" draft.of="Stackoverflow Debug on STM32L4 mcu" draft.title="Stackoverflow Debug on STM32L4 mcu" modified="20200827074513197" tags="" title="Draft of 'Stackoverflow Debug on STM32L4 mcu'">
+<pre>Following command 
+
+''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf
+''
+
+gives full disassembly of the binary :
+
+.
+.
+.
+
+08004a40 &lt;Reset_Handler&gt;:
+ 8004a40:       f8df d034       ldr.w   sp, [pc, #52]   ; 8004a78 &lt;LoopForever+0x2&gt;
+ 8004a44:       2100            movs    r1, #0
+ 8004a46:       e003            b.n     8004a50 &lt;LoopCopyDataInit&gt;
+
+08004a48 &lt;CopyDataInit&gt;:
+ 8004a48:       4b0c            ldr     r3, [pc, #48]   ; (8004a7c &lt;LoopForever+0x6&gt;)
+ 8004a4a:       585b            ldr     r3, [r3, r1]
+ 8004a4c:       5043            str     r3, [r0, r1]
+ 8004a4e:       3104            adds    r1, #4
+
+08004a50 &lt;LoopCopyDataInit&gt;:
+ 8004a50:       480b            ldr     r0, [pc, #44]   ; (8004a80 &lt;LoopForever+0xa&gt;)
+ 8004a52:       4b0c            ldr     r3, [pc, #48]   ; (8004a84 &lt;LoopForever+0xe&gt;)
+ 8004a54:       1842            adds    r2, r0, r1
+ 8004a56:       429a            cmp     r2, r3
+ 8004a58:       d3f6            bcc.n   8004a48 &lt;CopyDataInit&gt;
+ 8004a5a:       4a0b            ldr     r2, [pc, #44]   ; (8004a88 &lt;LoopForever+0x12&gt;)
+ 8004a5c:       e002            b.n     8004a64 &lt;LoopFillZerobss&gt;
+
+08004a5e &lt;FillZerobss&gt;:
+ 8004a5e:       2300            movs    r3, #0
+ 8004a60:       f842 3b04       str.w   r3, [r2], #4
+
+08004a64 &lt;LoopFillZerobss&gt;:
+ 8004a64:       4b09            ldr     r3, [pc, #36]   ; (8004a8c &lt;LoopForever+0x16&gt;)
+ 8004a66:       429a            cmp     r2, r3
+ 8004a68:       d3f9            bcc.n   8004a5e &lt;FillZerobss&gt;
+ 8004a6a:       f7ff ffb3       bl      80049d4 &lt;SystemInit&gt;
+ 8004a6e:       f003 fbed       bl      800824c &lt;__libc_init_array&gt;
+ 8004a72:       f7ff fd39       bl      80044e8 &lt;main&gt;
+.
+.
+.
+
+
+</pre>
+</div>
+<div created="20200826124733722" modified="20200826131718543" tags="" title="Stackoverflow Debug on STM32L4 mcu">
+<pre>Following command 
+
+''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf
+''
+
+gives full disassembly of the binary 
+
+</pre>
 </div>
 
 
