--- a/index.html
+++ b/index.html
@@ -183,8 +183,6 @@ Error message and password prompt
 
 <li>Bluetooth wiki</li>
 
-<li>Draft of 'Stackoverflow Debug on STM32L4 mcu'</li>
-
 <li>Stackoverflow Debug on STM32L4 mcu</li>
 
 </ul>
@@ -9730,7 +9728,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200827074238301" list="$:/ControlPanel [[Draft of 'Stackoverflow Debug on STM32L4 mcu']] GettingStarted" modified="20200827074245005" title="$:/StoryList">
+<div created="20200827074658431" list="[[Stackoverflow Debug on STM32L4 mcu]] GettingStarted" modified="20200827074700070" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9746,7 +9744,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200827074232385&quot;
+            &quot;text&quot;: &quot;20200827074651966&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -9912,7 +9910,7 @@ Error message and password prompt
 
 BLE represents a trade-off between energy consumption, latency, piconet size, and throughput that mainly depends on parameters such as connInterval and connSlaveLatency. </pre>
 </div>
-<div created="20200826124733722" draft.of="Stackoverflow Debug on STM32L4 mcu" draft.title="Stackoverflow Debug on STM32L4 mcu" modified="20200827074513197" tags="" title="Draft of 'Stackoverflow Debug on STM32L4 mcu'">
+<div created="20200826124733722" modified="20200827074702815" tags="" title="Stackoverflow Debug on STM32L4 mcu">
 <pre>Following command 
 
 ''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf
@@ -9959,16 +9957,6 @@ gives full disassembly of the binary :
 .
 .
 
-
-</pre>
-</div>
-<div created="20200826124733722" modified="20200826131718543" tags="" title="Stackoverflow Debug on STM32L4 mcu">
-<pre>Following command 
-
-''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf
-''
-
-gives full disassembly of the binary 
 
 </pre>
 </div>
