--- a/index.html
+++ b/index.html
@@ -9728,7 +9728,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200827075014697" list="[[Stackoverflow Debug on STM32L4 mcu]] GettingStarted" modified="20200827075014697" title="$:/StoryList">
+<div created="20200827080351089" list="[[Stackoverflow Debug on STM32L4 mcu]] GettingStarted" modified="20200827080351089" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9744,7 +9744,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200827075012573&quot;
+            &quot;text&quot;: &quot;20200827080348694&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -9910,7 +9910,7 @@ Error message and password prompt
 
 BLE represents a trade-off between energy consumption, latency, piconet size, and throughput that mainly depends on parameters such as connInterval and connSlaveLatency. </pre>
 </div>
-<div created="20200826124733722" modified="20200827080301905" tags="" title="Stackoverflow Debug on STM32L4 mcu">
+<div created="20200826124733722" modified="20200827080437565" tags="" title="Stackoverflow Debug on STM32L4 mcu">
 <pre>Following command 
 
 ''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf
@@ -9930,7 +9930,7 @@ gives full disassembly of the binary :
  8004a44:       2100            movs    r1, #0
 ```
 
-''8004a46:       e003            b.n     8004a50 \&lt;LoopCopyDataInit\&gt;''
+,,8004a46:       e003            b.n     8004a50 &lt;LoopCopyDataInit&gt;,,
 
 
 ```
