--- a/index.html
+++ b/index.html
@@ -9910,7 +9910,7 @@ Error message and password prompt
 
 BLE represents a trade-off between energy consumption, latency, piconet size, and throughput that mainly depends on parameters such as connInterval and connSlaveLatency. </pre>
 </div>
-<div created="20200826124733722" modified="20200827080437565" tags="" title="Stackoverflow Debug on STM32L4 mcu">
+<div created="20200826124733722" modified="20200827080606132" tags="" title="Stackoverflow Debug on STM32L4 mcu">
 <pre>Following command 
 
 ''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf
@@ -9930,7 +9930,7 @@ gives full disassembly of the binary :
  8004a44:       2100            movs    r1, #0
 ```
 
-,,8004a46:       e003            b.n     8004a50 &lt;LoopCopyDataInit&gt;,,
+`8004a46:       e003            b.n     8004a50 &lt;LoopCopyDataInit&gt;`
 
 
 ```
