--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/ControlPanel</li>
+
 <li>$:/core</li>
 
 <li>$:/GitHub/Filename</li>
@@ -161,6 +163,8 @@ Error message and password prompt
 
 <li>$:/state/sidebar</li>
 
+<li>$:/state/tab--1963855381</li>
+
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
@@ -178,6 +182,10 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
+
+<li>$:/themes/tiddlywiki/vanilla/metrics/sidebarbreakpoint</li>
+
+<li>$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth</li>
 
 <li>BLE Throughput</li>
 
@@ -199,6 +207,12 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div color="#bbb" created="20200827081121132" icon="$:/core/images/options-button" modified="20200827081121132" title="$:/ControlPanel">
+<pre>&lt;div class=&quot;tc-control-panel&quot;&gt;
+&lt;&lt;tabs &quot;[all[shadows+tiddlers]tag[$:/tags/ControlPanel]!has[draft.of]]&quot; &quot;$:/core/ui/ControlPanel/Info&quot;&gt;&gt;
+&lt;/div&gt;
+</pre>
+</div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.23-prerelease">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -9713,8 +9727,11 @@ Error message and password prompt
 <div created="20200826125056796" modified="20200826131723738" title="$:/state/sidebar">
 <pre>yes</pre>
 </div>
-<div created="20200812123434981" modified="20200812123434981" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200827080847578" modified="20200827080847578" title="$:/state/tab--1963855381">
+<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
+</div>
+<div created="20200812123434981" modified="20200827080840658" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20200812123450621" modified="20200812123450621" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -9728,7 +9745,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200827080351089" list="[[Stackoverflow Debug on STM32L4 mcu]] GettingStarted" modified="20200827080351089" title="$:/StoryList">
+<div created="20200827080835355" list="$:/ControlPanel [[Stackoverflow Debug on STM32L4 mcu]] GettingStarted" modified="20200827080838973" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9744,7 +9761,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200827080348694&quot;
+            &quot;text&quot;: &quot;20200827080833217&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -9901,6 +9918,12 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200827081041704" modified="20200827081041946" title="$:/themes/tiddlywiki/vanilla/metrics/sidebarbreakpoint">
+<pre>1060px</pre>
+</div>
+<div created="20200827080952072" modified="20200827080953464" title="$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth">
+<pre>800px</pre>
 </div>
 <div created="20200824143432737" modified="20200824143516078" tags="" title="BLE Throughput">
 <pre></pre>
