--- a/index.html
+++ b/index.html
@@ -173,11 +173,15 @@ Error message and password prompt
 
 <li>$:/state/tab/sidebar--595412856</li>
 
+<li>$:/state/tabs/controlpanel/toolbars-1345989671</li>
+
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
+
+<li>$:/theme</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -186,6 +190,10 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/vanilla/metrics/sidebarbreakpoint</li>
 
 <li>$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth</li>
+
+<li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
+
+<li>$:/view</li>
 
 <li>BLE Throughput</li>
 
@@ -9727,7 +9735,7 @@ Error message and password prompt
 <div created="20200826125056796" modified="20200826131723738" title="$:/state/sidebar">
 <pre>yes</pre>
 </div>
-<div created="20200827080847578" modified="20200827080847578" title="$:/state/tab--1963855381">
+<div created="20200827080847578" modified="20200827081229887" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
 <div created="20200812123434981" modified="20200827080840658" title="$:/state/tab-1749438307">
@@ -9742,10 +9750,13 @@ Error message and password prompt
 <div created="20200824141448958" modified="20200824143551343" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
+<div created="20200827081216349" modified="20200827081222366" title="$:/state/tabs/controlpanel/toolbars-1345989671">
+<pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
+</div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200827080835355" list="$:/ControlPanel [[Stackoverflow Debug on STM32L4 mcu]] GettingStarted" modified="20200827080838973" title="$:/StoryList">
+<div created="20200827080835355" list="[[Stackoverflow Debug on STM32L4 mcu]] GettingStarted" modified="20200827080838973" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9809,6 +9820,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200827081144243" modified="20200827081148204" title="$:/theme">
+<pre>$:/themes/tiddlywiki/snowwhite</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23-prerelease">
 <pre>{
@@ -9924,6 +9938,12 @@ Error message and password prompt
 </div>
 <div created="20200827080952072" modified="20200827080953464" title="$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth">
 <pre>800px</pre>
+</div>
+<div created="20200827081242846" modified="20200827081242846" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
+<pre>fluid-fixed</pre>
+</div>
+<div created="20200827081156310" modified="20200827081158166" title="$:/view">
+<pre>classic</pre>
 </div>
 <div created="20200824143432737" modified="20200824143516078" tags="" title="BLE Throughput">
 <pre></pre>
