--- a/index.html
+++ b/index.html
@@ -9747,7 +9747,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200827081419732" list="$:/ControlPanel" modified="20200827081419732" title="$:/StoryList">
+<div created="20200827081646419" list="[[BLE Throughput]] [[Stackoverflow Debug on STM32L4 mcu]] GettingStarted" modified="20200827081748998" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9763,7 +9763,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200827081412852&quot;
+            &quot;text&quot;: &quot;20200827081641096&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -9930,8 +9930,12 @@ Error message and password prompt
 <div created="20200827081427276" modified="20200827081427276" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
-<div created="20200824143432737" modified="20200824143516078" tags="" title="BLE Throughput">
-<pre></pre>
+<div created="20200824143432737" modified="20200827081832118" tags="" title="BLE Throughput">
+<pre>https://interrupt.memfault.com/blog/ble-throughput-primer#le-2m-phy-bt-v50
+
+https://devzone.nordicsemi.com/f/nordic-q-a/254/streaming-data-over-ble-nrf8001-high-throughput-bandwidth-solution
+
+</pre>
 </div>
 <div created="20200824141517949" modified="20200824143418816" tags="[[bluetooth wiki]]" title="Bluetooth wiki">
 <pre>It is important to know that maximum number of packets per connection event is dependent on the BLE stack/chipsets and is limited to 4 packets per connection event with iOS, and 6 packets per connection event in Android 
