--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
 
+<li>ARMv7-m branching decipher on STM32L4 mcu</li>
+
 <li>BLE Throughput</li>
 
 <li>Bluetooth wiki</li>
-
-<li>Stackoverflow Debug on STM32L4 mcu</li>
 
 </ul>
 </p>
@@ -9747,7 +9747,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200827081646419" list="[[BLE Throughput]] [[Stackoverflow Debug on STM32L4 mcu]] GettingStarted" modified="20200827081748998" title="$:/StoryList">
+<div created="20200827081646419" list="[[BLE Throughput]] [[ARMv7-m branching decipher on STM32L4 mcu]] GettingStarted" modified="20200827081748998" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9930,19 +9930,7 @@ Error message and password prompt
 <div created="20200827081427276" modified="20200827081427276" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
-<div created="20200824143432737" modified="20200827081832118" tags="" title="BLE Throughput">
-<pre>https://interrupt.memfault.com/blog/ble-throughput-primer#le-2m-phy-bt-v50
-
-https://devzone.nordicsemi.com/f/nordic-q-a/254/streaming-data-over-ble-nrf8001-high-throughput-bandwidth-solution
-
-</pre>
-</div>
-<div created="20200824141517949" modified="20200824143418816" tags="[[bluetooth wiki]]" title="Bluetooth wiki">
-<pre>It is important to know that maximum number of packets per connection event is dependent on the BLE stack/chipsets and is limited to 4 packets per connection event with iOS, and 6 packets per connection event in Android 
-
-BLE represents a trade-off between energy consumption, latency, piconet size, and throughput that mainly depends on parameters such as connInterval and connSlaveLatency. </pre>
-</div>
-<div created="20200826124733722" modified="20200827080606132" tags="" title="Stackoverflow Debug on STM32L4 mcu">
+<div created="20200826124733722" modified="20200827082013932" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
 <pre>Following command 
 
 ''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf
@@ -9999,6 +9987,18 @@ gives full disassembly of the binary :
 
 
 </pre>
+</div>
+<div created="20200824143432737" modified="20200827081832118" tags="" title="BLE Throughput">
+<pre>https://interrupt.memfault.com/blog/ble-throughput-primer#le-2m-phy-bt-v50
+
+https://devzone.nordicsemi.com/f/nordic-q-a/254/streaming-data-over-ble-nrf8001-high-throughput-bandwidth-solution
+
+</pre>
+</div>
+<div created="20200824141517949" modified="20200824143418816" tags="[[bluetooth wiki]]" title="Bluetooth wiki">
+<pre>It is important to know that maximum number of packets per connection event is dependent on the BLE stack/chipsets and is limited to 4 packets per connection event with iOS, and 6 packets per connection event in Android 
+
+BLE represents a trade-off between energy consumption, latency, piconet size, and throughput that mainly depends on parameters such as connInterval and connSlaveLatency. </pre>
 </div>
 
 
