Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@ Error message and password prompt
 
 <li>$:/core</li>
 
+<li>$:/DefaultTiddlers</li>
+
 <li>$:/GitHub/Filename</li>
 
 <li>$:/GitHub/Path</li>
@@ -9708,6 +9710,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20200830132650048" modified="20200830132650048" title="$:/DefaultTiddlers">
+<pre>[list[$:/StoryList]]</pre>
+</div>
 <div created="20200812124034496" modified="20200812134534324" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
@@ -9743,8 +9748,8 @@ Error message and password prompt
 <div created="20200827080847578" modified="20200827080847578" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
-<div created="20200812123434981" modified="20200827080840658" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20200812123434981" modified="20200830132634552" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200812123450621" modified="20200812123450621" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -9758,7 +9763,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200827135654158" list="[[ARMv7-m branching decipher on STM32L4 mcu]] GettingStarted" modified="20200827135654158" title="$:/StoryList">
+<div created="20200830132533535" list="$:/ControlPanel GettingStarted" modified="20200830132533535" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9774,7 +9779,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200827135642872&quot;
+            &quot;text&quot;: &quot;20200830062931253&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
