Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9710,8 +9710,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200830132650048" modified="20200830132650048" title="$:/DefaultTiddlers">
-<pre>[list[$:/StoryList]]</pre>
+<div created="20200830132650048" modified="20200830132906921" title="$:/DefaultTiddlers">
+<pre>GettingStarted</pre>
 </div>
 <div created="20200812124034496" modified="20200812134534324" title="$:/GitHub/Filename">
 <pre>index.html</pre>
