Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Error message and password prompt
 
 <li>Bluetooth wiki</li>
 
-<li>Reactance, capacitance...</li>
+<li>Draft of 'New Tiddler'</li>
 
 <li>t2_encoding.PNG</li>
 
@@ -9765,7 +9765,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="[[Reactance, capacitance...]]" title="$:/StoryList">
+<div list="[[Draft of 'New Tiddler']]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9781,7 +9781,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200902162604939&quot;
+            &quot;text&quot;: &quot;20200902162937286&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -10052,7 +10052,7 @@ https://devzone.nordicsemi.com/f/nordic-q-a/254/streaming-data-over-ble-nrf8001-
 
 BLE represents a trade-off between energy consumption, latency, piconet size, and throughput that mainly depends on parameters such as connInterval and connSlaveLatency. </pre>
 </div>
-<div created="20200902162614703" modified="20200902162900659" tags="" title="Reactance, capacitance...">
+<div created="20200902162941894" draft.of="New Tiddler" draft.title="Reactance, capacity" modified="20200902163004490" tags="" title="Draft of 'New Tiddler'">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π</pre>
 </div>
 <div title="t2_encoding.PNG" type="image/png">
